--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,10 @@
+defaults:
+  -
+    scope:
+      path: 'r'
+    values:
+      layout: 'redirect'
+      sitemap: false
+
 plugins:
   - jekyll-redirect-from
